Update index.html for prod

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <a href="https://testvitalii.staging.mycartpanda.com/ex-ocu/next-offer/a9W23bqeKD?accepted=no">
       <button>Reject</button>
     </a>
-    <a href="https://testvitalii.staging.mycartpanda.com/ex-ocu/next-offer/a9W23bqeKD?accepted=yes">
+    <a href="https://testvitalii.mycartpanda.com/ex-ocu/next-offer/ZyVpZxnjPG?accepted=yes">
       <button>Accept</button>
     </a>
   </div>
