Update index.html for prod2

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   <h1>🐼 External Funnel Test 🐼</h1>
 
   <div class="button-group">
-    <a href="https://testvitalii.staging.mycartpanda.com/ex-ocu/next-offer/E3vroGx5R6?accepted=no">
+    <a href="https://testvitalii.mycartpanda.com/ex-ocu/next-offer/46jLdQpjp3?accepted=no">
       <button>Reject</button>
     </a>
-    <a href="https://testvitalii.staging.mycartpanda.com/ex-ocu/next-offer/E3vroGx5R6?accepted=yes">
+    <a href="https://testvitalii.mycartpanda.com/ex-ocu/next-offer/46jLdQpjp3?accepted=yes">
       <button>Accept</button>
     </a>
   </div>
