--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </a>
   </div>
 
-  <script src="https://testvitalii.staging.mycartpanda.com/js/libs/ocu-external.js"></script>
+  <script src="https://assets.mycartpanda.com/cartx-ecomm-ui-assets/js/libs/ocu-external.js"></script>
   <script>
     new OcuExternal();
   </script>
